name and question added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <h2>
+      hey there my name is arthur
+      <br>
+      what's yours? 
+    </h2>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
