new html and link

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <nav>
+      <a href="about.html"> arthur </a>
+    </nav>
     <h1>Hello, world!</h1>
     <h2>
       hey there my name is arthur
       <br>
       what's yours? 
+
     </h2>
 
     <!-- Optional JavaScript; choose one of the two! -->
